<resources>
    <string name="app_name">Eventify</string>
    <string name="login_account">Login Account</string>
    <string name="username">Your name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email address</string>
    <string name="username_hint">Username Hint</string>
    <string name="password_hint">Pass Hint</string>
    <string name="confirm_password">Confirm password</string>
    <string name="verification_code">Verification Code</string>
    <string name="create_password">Create password</string>
    <string name="welcome">Welcome Back!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_sign_up_with">or Sign up with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_ticket">Ticket</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_profile">Profile</string>
    <string name="title_user">User</string>
    <string name="title_change_profile">Change profile</string>
    <string name="title_my_event">My Event</string>
    <string name="notifications">Notifications</string>
    <string name="my_events">My events</string>
    <string name="account_setting">Account setting</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password">Change password</string>
    <string name="change_your_name">Change your name</string>
    <string name="title_categories">Categories</string>
    <string name="title_events_in_category">Events in category</string>
    <string name="create_event">Create Event</string>
    <string name="organizers_to_follow">Organizers to follow</string>
    <string name="event_name">Event name</string>
    <string name="location">Location</string>
    <string name="event_start_time">Event start time</string>
    <string name="event_end_time">Event end time</string>
    <string name="create">Create</string>
    <string name="follow">Follow</string>
    <string name="title_description">Description</string>
    <string name="title_location">Location</string>
    <string name="title_organizer">Organizer</string>
    <string name="choose_categories">Categories</string>
    <string name="description">Description</string>
    <string name="get_ticket">Get ticket</string>
    <string name="my_tickets">My Tickets</string>
</resources>