<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_interface_symbol"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_ticket"
        android:icon="@drawable/ticket"
        android:title="@string/title_ticket" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/bookmark"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />
</menu>