<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.basicproject3.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.basicproject3.ui.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_ticket"
        android:name="com.example.basicproject3.ui.fragments.TicketFragment"
        android:label="@string/title_ticket"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.basicproject3.ui.fragments.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <navigation
        android:id="@+id/navigation_profile"
        app:startDestination="@id/navigation_guest">
        <fragment
            android:id="@+id/navigation_guest"
            android:name="com.example.basicproject3.ui.fragments.GuestFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_guest">

            <action
                android:id="@+id/navigate_to_user_fragment"
                app:destination="@id/navigation_user" />
            <action
                android:id="@+id/action_navigation_guest_to_navigation_home"
                app:destination="@id/navigation_home" />
        </fragment>
        <fragment
            android:id="@+id/navigation_user"
            android:name="com.example.basicproject3.ui.fragments.UserFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_user">

            <action
                android:id="@+id/navigate_to_change_profile_fragment"
                app:destination="@id/change_profile" />
            <action
                android:id="@+id/action_navigation_user_to_navigation_home"
                app:destination="@id/navigation_home" />
        </fragment>
        <fragment
            android:id="@+id/change_profile"
            android:name="com.example.basicproject3.ui.fragments.ChangeProfileFragment"
            android:label="@string/title_change_profile"
            tools:layout="@layout/fragment_change_profile">

            <action
                android:id="@+id/navigate_change_profile_fragment_to_user_fragment"
                app:destination="@id/navigation_user" />
        </fragment>
    </navigation>
</navigation>