<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:backgroundTint="#dff9fb"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etSignUpUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="0dp"
        android:hint="@string/username"
        android:textSize="16sp"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/etSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="24dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/etSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="24dp"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size"
        app:passwordToggleEnabled="true"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="24dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size"
        app:passwordToggleEnabled="true"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/social_btn_background"
        android:text="@string/sign_up"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtSignInLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_link"
        android:textSize="13sp" />
</LinearLayout>