<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#dff9fb"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email_address">

        <EditText
            android:id="@+id/etSignInEmail"
            android:layout_width="290dp"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSignInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etSignInPassword"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#353b48"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/txtSignUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up_link" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgGoogleIcon"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/google"/>

        <ImageView
            android:id="@+id/imgFacebookIcon"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/facebook"/>

    </LinearLayout>

</LinearLayout>