<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_change_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".ui.fragments.ChangeProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/camera_super_super_small_500"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/clouds"/>

    <TextView
        android:id="@+id/txtChangeYourName"
        style="@style/TextWithChevron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:paddingVertical="5dp"
        android:text="@string/change_your_name"
        app:drawableEndCompat="@drawable/chevron_black_resize" />

    <TextView
        android:id="@+id/txtChangePassword"
        style="@style/TextWithChevron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:paddingVertical="5dp"
        android:text="@string/change_password"
        app:drawableEndCompat="@drawable/chevron_black_resize" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginVertical="60dp"
        android:background="@drawable/social_btn_background"
        android:text="@string/save_changes"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false" />

</LinearLayout>